# codeconnect-live

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  render.yaml  tailwind.config.ts
.github/workflows/: deploy.yml
backend/: .env.example  .gitignore  main.py  pyproject.toml
backend/app/: config.py  database.py  dependencies.py
backend/app/models/: __init__.py  chat_message.py  interview.py  invitation.py  template.py  user.py
backend/app/routers/: __init__.py  auth.py  code_execution.py  interviews.py  invitations.py  templates.py  users.py  websocket.py
backend/app/schemas/: auth.py  chat.py  code_execution.py  interview.py  invitation.py  template.py  user.py
backend/app/services/: code_execution_service.py  websocket_manager.py
backend/app/utils/: security.py
backend/scripts/: seed_data.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_interviews.py
data/: codeview.db
frontend/: package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/public/: js-worker.js
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: setup.ts
frontend/src/api/: codeService.ts  httpClient.ts  types.ts  websocketClient.ts
frontend/src/pages/: Auth.tsx  Dashboard.tsx  Demo.tsx  Index.tsx  InterviewRoom.tsx  Lobby.tsx  Profile.tsx  Templates.tsx
frontend/src/services/: codeExecutor.ts  jsExecutor.ts  (+3 more)
src/: App.tsx  index.css
src/pages/: Index.tsx  InterviewRoom.tsx
src/stores/: authStore.ts  interviewStore.ts  templateStore.ts
src/types/: index.ts
(+22 files in other folders)
